# fedrq-mirror

./: .gitignore  CONTRIBUTING.md  NEWS.md  README.md  REUSE.toml  changelog  custom-basedpyright.toml  fedrq.spec  lint.sh  mkdocs.yml  noxfile.py  pyproject.toml  ruff.toml  srpm.sh
.basedpyright/: baseline.json
.builds/: epel9.yml  main.yml  mockbuild-36.yml  mockbuild-37.yml  mockbuild.yml  test.yml
.copr/: Makefile
contrib/: _incr_version  bump.sh  devenv.sh  edbackends.sh  fedoraify.py
contrib/api_examples/: ftbfs_retirements.py
contrib/container/: Containerfile  Containerfile.rhel
doc/: dnf-repoquery-diff.md  fedrq.1.scd  fedrq.5.scd  mkdocs_mangen.py
doc/API/: Summary.md
doc/API/backends/: dnf.md  libdnf5.md
fedrq/: __init__.py  __main__.py  _dnf.py  _utils.py  config.py  repoquery.py
fedrq/cli/: base.py  formatters.py
fedrq/cli/commands/: pkgs.py  subpkgs.py  whatrequires.py
fedrq/data/: releases.toml
fedrq/data/repos/: epel.repo  (+1 more)
requirements/: all.txt  codeqa.txt  doc.txt  formatters.txt  pydanticv1_test.txt  refresh.yml  requirements.txt  srpm.txt  test.txt  typing.txt
src/fedrq/: __init__.py  _archive.py  _utils.py  config.py  release_repo.py  repoquery.py
tests/: .gitignore  conftest.py  test_checkconfig.py  test_repo.py  test_repoquery.py  test_subbpkgs.py  test_whatrequires.py
tests/integration/: test_backends.py  test_cache.py  test_download.py  test_experimental_comps.py  test_pkgs.py  test_subpkgs.py
tests/test_data/: _template.spec  build.sh
tests/unit/: test_archive.py  test_backend_base.py  test_cache.py  test_changelog.py  test_command.py  test_config.py  test_formatters.py  test_formatters_command.py  test_libdnf5.py  test_pkgs.py  test_repo.py  test_repoquery.py  test_subbpkgs.py  test_whatrequires.py
(+30 files in other folders)
